SUBDIRS = GtkX

lib_LTLIBRARIES = libGtkX.la

libGtkX_la_SOURCES = Box.C Container.C Dialog.C ListView.C Notebook.C \
RadioBox.C ScrolledWindow.C SelectionDialog.C Widget1s.C Widget.C \
Window.C Widget0.C Widget2s.C MenuBar.C Menu.C ComboBox.C \
RadioButton.C ScrolledText.C MultiPaned.C Statusbar.C Button.C \
FileSelection.C FileSelectionDialog.C Toolbar.C Events.C

AM_CPPFLAGS = $(GTKMM_CFLAGS)



