SUBDIRS = GtkX

lib_LTLIBRARIES = libGtkX.la

libGtkX_la_SOURCES = Box.C Container.C Dialog.C ListView.C Notebook.C \
RadioBox.C ScrolledWindow.C SelectionDialog.C Widget.C \
Window.C MenuBar.C Menu.C ComboBox.C \
RadioButton.C ScrolledText.C MultiPaned.C Statusbar.C Button.C \
FileSelection.C FileSelectionDialog.C Toolbar.C Events.C Scale.C \
CheckMenuItem.C RadioMenuItem.C CheckButton.C Main.C MenuItem.C \
Label.C Entry.C OptionMenu.C Table.C SeparatorMenuItem.C Separator.C \
EventType.C GUIString.C Cursor.C SpinButton.C

AM_CPPFLAGS = $(GTKMM_CFLAGS)



