SUBDIRS = Xmmm

lib_LTLIBRARIES = libXmmm.la

AM_CPPFLAGS = $(SIGC_CFLAGS)

libXmmm_la_LIBADD = $(SIGC_LIBS)

libXmmm_la_SOURCES = Box1.cc Box2.c Box.cc BulletinBoard.cc Button.cc \
Container.cc Dialog.cc ListView.cc Notebook.cc XmmmNotebook.c \
RadioBox.cc RadioButton.cc ScrolledWindow.cc SelectionDialog.cc Widget.cc \
Window.cc Label.cc SpinButton.cc CheckButton.cc MenuItem.cc CheckMenuItem.cc \
OptionMenu.cc Scale.cc Entry.cc ComboBox.cc SeparatorMenuItem.cc MenuBar.cc \
Menu.cc Events.cc Main.cc

